Format code.